// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Kusama Nomination Pools > nomination pool lifecycle test > bond extra funds events 1`] = `
[
  {
    "data": {
      "amount": "(rounded 1700000000)",
      "stash": "F3opxRbN5ZavB4LTn2UYFiR65bYBcdqyfzfmkutumQadysv",
    },
    "method": "Bonded",
    "section": "staking",
  },
  {
    "data": {
      "bonded": "(rounded 1700000000)",
      "joined": false,
      "member": "DFeS2XXq12E9iRyp52vRvYaMgWrgMXgDc6Cuc7KvfEaGETq",
      "poolId": "(rounded 210)",
    },
    "method": "Bonded",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Nomination Pools > nomination pool lifecycle test > claim commission events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x1a000000",
          "index": 41,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 3700)",
          "refTime": "(rounded 500000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Nomination Pools > nomination pool lifecycle test > commission alteration events 1`] = `
[
  {
    "data": {
      "current": [
        "0.10%",
        "DFeS2XXq12E9iRyp52vRvYaMgWrgMXgDc6Cuc7KvfEaGETq",
      ],
      "poolId": "(rounded 210)",
    },
    "method": "PoolCommissionUpdated",
    "section": "nominationPools",
  },
  {
    "data": {
      "maxCommission": "1.00%",
      "poolId": "(rounded 210)",
    },
    "method": "PoolMaxCommissionUpdated",
    "section": "nominationPools",
  },
  {
    "data": {
      "changeRate": {
        "maxIncrease": "100.00%",
        "minDelay": 10,
      },
      "poolId": "(rounded 210)",
    },
    "method": "PoolCommissionChangeRateUpdated",
    "section": "nominationPools",
  },
  {
    "data": {
      "permission": "Permissionless",
      "poolId": "(rounded 210)",
    },
    "method": "PoolCommissionClaimPermissionUpdated",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Nomination Pools > nomination pool lifecycle test > create nomination pool events 1`] = `
[
  {
    "data": {
      "amount": 1000000000000,
      "stash": "F3opxRbN5ZavB4LTn2UYFiR65bYBcdqyfzfmkutumQadysv",
    },
    "method": "Bonded",
    "section": "staking",
  },
  {
    "data": {
      "depositor": "FfmSiZNJP72xtSaXiP2iUhBwWeMEvmjPrxY2ViVkWaeChDC",
      "poolId": "(rounded 210)",
    },
    "method": "Created",
    "section": "nominationPools",
  },
  {
    "data": {
      "bonded": 1000000000000,
      "joined": true,
      "member": "FfmSiZNJP72xtSaXiP2iUhBwWeMEvmjPrxY2ViVkWaeChDC",
      "poolId": "(rounded 210)",
    },
    "method": "Bonded",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Nomination Pools > nomination pool lifecycle test > create nomination pool with insufficient funds events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x08000000",
          "index": 41,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 8500)",
          "refTime": "(rounded 2700000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Kusama Nomination Pools > nomination pool lifecycle test > join nomination pool events 1`] = `
[
  {
    "data": {
      "amount": "(rounded 1700000000)",
      "stash": "F3opxRbN5ZavB4LTn2UYFiR65bYBcdqyfzfmkutumQadysv",
    },
    "method": "Bonded",
    "section": "staking",
  },
  {
    "data": {
      "bonded": "(rounded 1700000000)",
      "joined": true,
      "member": "DFeS2XXq12E9iRyp52vRvYaMgWrgMXgDc6Cuc7KvfEaGETq",
      "poolId": "(rounded 210)",
    },
    "method": "Bonded",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Nomination Pools > nomination pool lifecycle test > unbond events 1`] = `
[
  {
    "data": {
      "amount": "(rounded 1700000000)",
      "stash": "F3opxRbN5ZavB4LTn2UYFiR65bYBcdqyfzfmkutumQadysv",
    },
    "method": "Unbonded",
    "section": "staking",
  },
  {
    "data": {
      "balance": "(rounded 1700000000)",
      "era": "(rounded 7700)",
      "member": "DFeS2XXq12E9iRyp52vRvYaMgWrgMXgDc6Cuc7KvfEaGETq",
      "points": "(rounded 1700000000)",
      "poolId": "(rounded 210)",
    },
    "method": "Unbonded",
    "section": "nominationPools",
  },
]
`;

exports[`Kusama Nomination Pools > nomination pool lifecycle test > update roles events 1`] = `
[
  {
    "data": {
      "bouncer": "Ei5cESVBSoEA3ZYfDUdMobkH8ZG8nLBwptyijjuWWyA17dr",
      "nominator": "E6wQ1iDTCXykVP58tRC5Dx4oskFR5zkg59EGR8tEjtMKVzY",
      "root": "HJzQySPFxy81SD4wVMbJvZjJufYV1C8zKEVL7y3h4tbRbyR",
    },
    "method": "RolesUpdated",
    "section": "nominationPools",
  },
]
`;
